# postflop-solver

./: Cargo.toml  README.md  dataset_generator_design_doc.txt
dataset_generator/: create_augmented_dataset.py  create_internal_search_data.py  create_range_augmented_dataset.py  csv_data_processor.py  dataset_generator_design_doc.txt  query_solver.py  range_generator.py  solver_output_types.py  trace_formatter.py
examples/: query_solver.rs
internal_search/: generate_search_examples.py  implementation_steps.txt  implementation_timeline.txt  mastering_board_games_by_external_and_internal_planning_with_language_models.txt  placeholderpokersolver.py  poker_internal_search_methodology.txt  poker_search_builder.py
src/: file.rs  lib.rs  mutex_like.rs
src/game/: serialization.rs
