[package]
name = "postflop-solver"
version = "0.1.0"
authors = ["Wataru Inariba"]
edition = "2021"
description = "An open-source postflop solver for Texas hold'em poker"
documentation = "https://b-inary.github.io/postflop_solver/postflop_solver/"
repository = "https://github.com/b-inary/postflop-solver"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]
name = "postflop_solver_ffi"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["derive", "std"], optional = true }
once_cell = "1.18.0"
rayon = { version = "1.8.0", optional = true }
regex = "1.9.6"
zstd = { version = "0.12.4", optional = true, default-features = false }
colored = "2"
crossbeam-utils = "0.8"
parking_lot = "0.12"

[features]
default = ["bincode", "rayon"]
custom-alloc = []
rayon = ["dep:rayon", "zstd?/zstdmt"]
